--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -22,8 +22,8 @@ jobs:
           ref: main # The branch, tag or SHA to checkout
           path: ./tomcat # Relative path under $GITHUB_WORKSPACE
 
-      - name: Setup Java 9
-        uses: actions/setup-java@v1
+      - name: Setup Java JDK
+        uses: actions/setup-java@v3.0.0
         with:
           java-version: '9.0.4' # The JDK version to make available on the path
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
