--- a/.github/workflows/build-tomcat.yml
+++ b/.github/workflows/build-tomcat.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Setup Java JDK
         uses: actions/setup-java@v3.0.0
         with:
+          distribution: temurin
           java-version: '9.0.4' # The JDK version to make available on the path
           java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
           architecture: x64 # (x64 or x86) - defaults to x64
